[package]
name = "easyssg"
version = "0.1.0"
edition = "2021"
authors = ["James Clarke <james@jamesdavidclarke.com>"]
description = "A simple static site generator built with Rust."
license = "AGPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
libeasyssg = { path = "../libeasyssg" }
walkdir = "2.4.0"

[lints]
workspace = true
